# waveterm

./: .gitattributes  .gitignore  BUILD.md  CLAUDE.md  Taskfile.yml  electron.vite.config.ts  go.mod  go.sum  package-lock.json  package.json  tsconfig.json  vitest.config.ts
cmd/generatego/: main-generatego.go
cmd/server/: main-server.go
db/migrations-wstore/: 000012_channel.down.sql  000012_channel.up.sql  000013_radarreport.down.sql  000013_radarreport.up.sql  000014_channelrows.down.sql  000014_channelrows.up.sql  000015_jarvisconversation.down.sql  000015_jarvisconversation.up.sql
docs/: deferred.md  environment-roadmap.md  feature-triage.md  keyboard-shortcuts.md  open-issues.md  orchestrator-roadmap.md  redesign-brief.md  redesign-meta-spec.md  redesign-phase1-spec.md  tauri-migration-meta-spec.md
docs/agents/: ask-clear-hook.js  ask-hook.js  channels-flows.md  channels-improvements.md  cockpit-coherence-audit.md  organic-ask-setup.md  runs-live-visibility-brief.md  runs-piece1-acceptance.md  runs-piece4-acceptance.md  runs-pipeline-known-issues.md  tab-auto-naming.md  (+1 more)
emain/: emain-window.ts  emain.ts
frontend/: tailwindsetup.css  wave.ts
schema/: settings.json
scripts/: cdp-e2e-runs-piece4.mjs  cdp-e2e-runs.mjs  cdp-e2e.mjs  cdp-goto-channels.mjs  cdp-profile-verify.mjs  cdp-profile-visual.mjs  cdp-shot.mjs  cdp-shot.test.mjs  cdp-test-channels.mjs  gen-cockpit-fixtures.mjs  inject-live-agents.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  estart.rs  init.rs  main.rs  paths.rs
(+1145 files in other folders)
