[package]
name = "wave-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
open = "5"

[target.'cfg(windows)'.dependencies]
# Job Object APIs to tie wavesrv's lifetime to wave-tauri's (KILL_ON_JOB_CLOSE). Pinned to the
# version already in the tree via Tauri so no duplicate copy is pulled.
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_JobObjects"] }
